fix: overflow y page

--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
